tests/rosetta/out/Dart/bifid-cipher.error
run error: exit status 254
../../tests/rosetta/out/Dart/bifid-cipher.dart:134:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:99:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:8:13: Error: Type 'any' not found.
Map<String, any> square_to_maps(List<List<String>> square) {
            ^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:19:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      y = (y as num) + 1;
                     ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:21:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    x = (x as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:27:11: Error: Method not found: 'upper'.
  var s = upper(text);
          ^^^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:31:57: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    var ch = ((s is String) ? s.substring(i, (i as num) + 1) : (s as List).sublist(i, (i as num) + 1));
                                                        ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:31:98: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    var ch = ((s is String) ? s.substring(i, (i as num) + 1) : (s as List).sublist(i, (i as num) + 1));
                                                                                                 ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:33:26: Error: A value of type 'num' can't be assigned to a variable of type 'String'.
      out = (out as num) + (ch as num);
                         ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:35:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:46:43: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    var ch = text.substring(i, (i as num) + 1);
                                          ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:50:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:59:58: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    var key = row0[j].toString() + ',' + row0[(j as num) + 1].toString();
                                                         ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:61:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    j = (j as num) + 2;
                   ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:71:43: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    var ch = text.substring(i, (i as num) + 1);
                                          ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:75:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:83:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    idx = (idx as num) + 1;
                       ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:87:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    idx = (idx as num) + 1;
                       ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:94:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    j = (j as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:135:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/bifid-cipher.dart:159:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:188:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:193:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/bifid-cipher.dart:197:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
